# banana-cot

./: README.md  app.py  check_overlap.py  evaluate.py  main.py  pyproject.toml  requirements.txt  test.py
evals/: evaluator.py  mul_eval_large.jsonl  mul_eval_small.jsonl  mul_eval_very_small.jsonl  multiplication-gen.py  two-digit-large.jsonl  two-digit-padded-large.jsonl  two-digit-padded-small.jsonl  two-digit-padded-very-small.jsonl  two-digit.jsonl
evals/scores/: eval_results.csv  mul_eval_results.csv
finetune/: checkpoint-upload.py  sft_config.json  sft_config_banana.json  sft_train.py  training-dataset-gen.py
