[project]
name = "banana-cot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.48.2",
    "datasets>=4.4.1",
    "matplotlib>=3.10.7",
    "streamlit>=1.52.1",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "trl>=0.25.1",
    "unsloth",
    "unsloth-zoo>=2025.7.4",
    "wandb>=0.23.1",
]

[tool.uv.sources]
unsloth = { git = "https://github.com/unslothai/unsloth.git" }
